Fix display on mobile

--- a/instruction.css
+++ b/instruction.css
@@ -77,7 +77,7 @@ html {
 .img-logo {
     display: block;
 
-    width: 400px;
+    max-width: 500px;
     height: auto;
     
     margin: 20px auto;
